# DutchMate

./: README.md  pyproject.toml
src/dutchmate/backend/: app.py
src/dutchmate/frontend/: app.py
src/dutchmate/lessons/: lesson_01.json  lesson_02.json  lesson_03.json  lesson_04.json  lesson_05.json  lesson_06.json  lesson_07.json  lesson_08.json  lesson_09.json  lesson_10.json
src/dutchmate/scripts/: chunk_and_embed.py
