[project]
name = "dutchmate"
version = "0.1.0"
description = "Interactive B1 Dutch language tutor using LLMs and RAG"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "openai",
    "langchain",
    "chromadb",
    "streamlit",
    "fastapi",
    "uvicorn"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dutchmate"]
